--- a/LDS/package.json
+++ b/LDS/package.json
@@ -11,7 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "node-opcua": "^2.6.4",
-    "vorpal": "^1.12.0",
-    "vorpal-repl": "^1.1.8"
+    "node-opcua-certificate-manager": "^2.6.4"
   }
 }
