--- a/LDS/package.json
+++ b/LDS/package.json
@@ -1,15 +1,23 @@
 {
-  "name": "lds",
+  "name": "lds_server",
   "version": "1.0.0",
-  "description": "",
+  "description": "LDS_Server",
   "main": "serverLDS.js",
   "scripts": {
-    "dev": "node serverLDS.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "node serverLDS.js"
   },
-  "author": "",
+  "authors": [
+    {
+      "name": "Biuso Mario"
+    },
+    {
+      "name": "Bonanno Antonino"
+    }
+  ],
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "node-opcua": "^2.6.4",
     "node-opcua-certificate-manager": "^2.6.4"
   }
