--- a/Server/package.json
+++ b/Server/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "client",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "client.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
