--- a/Client/ClientOPCUA_LDS/build.xml
+++ b/Client/ClientOPCUA_LDS/build.xml
@@ -1,73 +1,126 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!-- You may freely edit this file. See commented blocks below for -->
-<!-- some examples of how to customize the build. -->
-<!-- (If you delete it and reopen the project it will be recreated.) -->
-<!-- By default, only the Clean and Build commands use this build script. -->
-<!-- Commands such as Run, Debug, and Test only use this build script if -->
-<!-- the Compile on Save feature is turned off for the project. -->
-<!-- You can turn off the Compile on Save (or Deploy on Save) setting -->
-<!-- in the project's Project Properties dialog box.-->
-<project name="JavaClientBB" default="default" basedir=".">
-    <description>Builds, tests, and runs the project JavaClientBB.</description>
-    <import file="nbproject/build-impl.xml"/>
-    <!--
-
-    There exist several targets which are by default empty and which can be 
-    used for execution of your tasks. These targets are usually executed 
-    before and after some main targets. They are: 
-
-      -pre-init:                 called before initialization of project properties
-      -post-init:                called after initialization of project properties
-      -pre-compile:              called before javac compilation
-      -post-compile:             called after javac compilation
-      -pre-compile-single:       called before javac compilation of single file
-      -post-compile-single:      called after javac compilation of single file
-      -pre-compile-test:         called before javac compilation of JUnit tests
-      -post-compile-test:        called after javac compilation of JUnit tests
-      -pre-compile-test-single:  called before javac compilation of single JUnit test
-      -post-compile-test-single: called after javac compilation of single JUunit test
-      -pre-jar:                  called before JAR building
-      -post-jar:                 called after JAR building
-      -post-clean:               called after cleaning build products
-
-    (Targets beginning with '-' are not intended to be called on their own.)
-
-    Example of inserting an obfuscator after compilation could look like this:
-
-        <target name="-post-compile">
-            <obfuscate>
-                <fileset dir="${build.classes.dir}"/>
-            </obfuscate>
-        </target>
-
-    For list of available properties check the imported 
-    nbproject/build-impl.xml file. 
-
-
-    Another way to customize the build is by overriding existing main targets.
-    The targets of interest are: 
-
-      -init-macrodef-javac:     defines macro for javac compilation
-      -init-macrodef-junit:     defines macro for junit execution
-      -init-macrodef-debug:     defines macro for class debugging
-      -init-macrodef-java:      defines macro for class execution
-      -do-jar:                  JAR building
-      run:                      execution of project 
-      -javadoc-build:           Javadoc generation
-      test-report:              JUnit report generation
-
-    An example of overriding the target for project execution could look like this:
-
-        <target name="run" depends="JavaClientBB-impl.jar">
-            <exec dir="bin" executable="launcher.exe">
-                <arg file="${dist.jar}"/>
-            </exec>
-        </target>
-
-    Notice that the overridden target depends on the jar target and not only on 
-    the compile target as the regular run target does. Again, for a list of available 
-    properties which you can use, check the target you are overriding in the
-    nbproject/build-impl.xml file. 
-
-    -->
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!-- WARNING: Eclipse auto-generated file.
+              Any modifications will be overwritten.
+              To include a user specific buildfile here, simply create one in the same
+              directory with the processing instruction <?eclipse.ant.import?>
+              as the first entry and export the buildfile again. --><project basedir="." default="build" name="ClientOPCUA_LDS">
+    <property environment="env"/>
+    <property name="opc-ua-stack.location" value="../../../Software di Utilita/OPC UA/UA-Java-Legacy-master"/>
+    <property name="debuglevel" value="source,lines,vars"/>
+    <property name="target" value="1.8"/>
+    <property name="source" value="1.8"/>
+    <path id="Maven Dependencies.libraryclasspath">
+        <pathelement location="../../../../../../../../.m2/repository/org/bouncycastle/bcpkix-jdk15to18/1.64/bcpkix-jdk15to18-1.64.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/org/bouncycastle/bcprov-jdk15to18/1.64/bcprov-jdk15to18-1.64.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/com/madgag/spongycastle/bcpkix-jdk15on/1.58.0.0/bcpkix-jdk15on-1.58.0.0.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/com/madgag/spongycastle/core/1.58.0.0/core-1.58.0.0.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/com/madgag/spongycastle/prov/1.58.0.0/prov-1.58.0.0.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/org/apache/httpcomponents/httpclient/4.5.6/httpclient-4.5.6.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/org/apache/httpcomponents/httpcore/4.4.10/httpcore-4.4.10.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/commons-logging/commons-logging/1.2/commons-logging-1.2.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/commons-codec/commons-codec/1.10/commons-codec-1.10.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/org/apache/httpcomponents/httpcore-nio/4.4.10/httpcore-nio-4.4.10.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/org/slf4j/slf4j-api/1.7.25/slf4j-api-1.7.25.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/junit/junit/4.12/junit-4.12.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/org/mockito/mockito-core/2.2.17/mockito-core-2.2.17.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/net/bytebuddy/byte-buddy/1.5.4/byte-buddy-1.5.4.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/net/bytebuddy/byte-buddy-agent/1.5.3/byte-buddy-agent-1.5.3.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/org/objenesis/objenesis/2.4/objenesis-2.4.jar"/>
+        <pathelement location="../../../../../../../../.m2/repository/org/slf4j/slf4j-simple/1.7.25/slf4j-simple-1.7.25.jar"/>
+    </path>
+    <path id="opc-ua-stack.classpath">
+        <pathelement location="${opc-ua-stack.location}/target/classes"/>
+        <pathelement location="${opc-ua-stack.location}/target/test-classes"/>
+        <path refid="Maven Dependencies.libraryclasspath"/>
+    </path>
+    <path id="ClientOPCUA_LDS.classpath">
+        <pathelement location="bin"/>
+        <path refid="opc-ua-stack.classpath"/>
+    </path>
+    <path id="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER.libraryclasspath"/>
+    <path id="run.ClientFrame.classpath">
+        <path refid="ClientOPCUA_LDS.classpath"/>
+        <path refid="opc-ua-stack.classpath"/>
+        <path refid="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER.libraryclasspath"/>
+    </path>
+    <path id="run.ClientGUI.classpath">
+        <path refid="ClientOPCUA_LDS.classpath"/>
+        <path refid="opc-ua-stack.classpath"/>
+        <path refid="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER.libraryclasspath"/>
+    </path>
+    <path id="run.ClientOPCUA (1).classpath">
+        <path refid="ClientOPCUA_LDS.classpath"/>
+        <path refid="opc-ua-stack.classpath"/>
+        <path refid="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER.libraryclasspath"/>
+    </path>
+    <path id="run.NewJFrame.classpath">
+        <path refid="ClientOPCUA_LDS.classpath"/>
+        <path refid="opc-ua-stack.classpath"/>
+        <path refid="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER.libraryclasspath"/>
+    </path>
+    <target name="init">
+        <mkdir dir="bin"/>
+        <copy includeemptydirs="false" todir="bin">
+            <fileset dir="src">
+                <exclude name="**/*.launch"/>
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
+    </target>
+    <target name="clean">
+        <delete dir="bin"/>
+    </target>
+    <target depends="clean" name="cleanall">
+        <ant antfile="build.xml" dir="${opc-ua-stack.location}" inheritAll="false" target="clean"/>
+    </target>
+    <target depends="build-subprojects,build-project" name="build"/>
+    <target name="build-subprojects">
+        <ant antfile="build.xml" dir="${opc-ua-stack.location}" inheritAll="false" target="build-project">
+            <propertyset>
+                <propertyref name="build.compiler"/>
+            </propertyset>
+        </ant>
+    </target>
+    <target depends="init" name="build-project">
+        <echo message="${ant.project.name}: ${ant.file}"/>
+        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
+            <src path="src"/>
+            <classpath refid="ClientOPCUA_LDS.classpath"/>
+        </javac>
+    </target>
+    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
+    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
+        <copy todir="${ant.library.dir}">
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </copy>
+        <unzip dest="${ant.library.dir}">
+            <patternset includes="jdtCompilerAdapter.jar"/>
+            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
+        </unzip>
+    </target>
+    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
+        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
+        <antcall target="build"/>
+    </target>
+    <target name="ClientFrame">
+        <java classname="biuso.bonanno.ClientFrame" failonerror="true" fork="yes">
+            <classpath refid="run.ClientFrame.classpath"/>
+        </java>
+    </target>
+    <target name="ClientGUI">
+        <java classname="biuso.bonanno.ClientGUI" failonerror="true" fork="yes">
+            <classpath refid="run.ClientGUI.classpath"/>
+        </java>
+    </target>
+    <target name="ClientOPCUA (1)">
+        <java classname="biuso.bonanno.ClientOPCUA" failonerror="true" fork="yes">
+            <classpath refid="run.ClientOPCUA (1).classpath"/>
+        </java>
+    </target>
+    <target name="NewJFrame">
+        <java classname="biuso.bonanno.NewJFrame" failonerror="true" fork="yes">
+            <classpath refid="run.NewJFrame.classpath"/>
+        </java>
+    </target>
 </project>
