--- a/Client/ClientOPCUA_LDS/.classpath
+++ b/Client/ClientOPCUA_LDS/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/opc-ua-stack"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
