--- a/Server/package.json
+++ b/Server/package.json
@@ -1,13 +1,20 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple_Server",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "dev": "node server.js"
   },
-  "author": "",
+  "authors": [
+    {
+      "name": "Biuso Mario"
+    },
+    {
+      "name": "Bonanno Antonino"
+    }
+  ],
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
