--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^8.2.0",
-    "node-opcua": "^2.6.4"
+    "node-opcua": "^2.6.4",
+    "node-opcua-certificate-manager": "^2.6.4"
   }
 }
