--- a/ClientOPCUA_LDS/.gitignore
+++ b/ClientOPCUA_LDS/.gitignore
@@ -59,9 +59,9 @@ local.properties
 # Typically, this file would be tracked if it contains build/dependency configurations:
 #.project
 
-**/nbproject/private/
-**/nbproject/Makefile-*.mk
-**/nbproject/Package-*.bash
+nbproject/private/
+nbproject/Makefile-*.mk
+nbproject/Package-*.bash
 build/
 nbbuild/
 dist/
